removed global user-select: none rule to fix a bug on iOS where todo text field was not selectable

--- a/src/App.css
+++ b/src/App.css
@@ -6,7 +6,6 @@ html {
 *::before,
 *::after {
   box-sizing: border-box;
-  user-select: none;
 }
 .App {
   max-width: 800px;
